# inflamm-debate-fm

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PIPELINE_ORDER.md  README.md  Singularity.def  pyproject.toml  run_job.sh  setup_hpc.sh  todo.md
hpc/: Singularity.def  run_job.sh  setup_hpc.sh
inflamm_debate_fm/: __init__.py  cli.py  config.py  dataset.py  features.py  plots.py
inflamm_debate_fm/analysis/: __init__.py  dimensionality.py  gsea.py  inflammation_vector.py
inflamm_debate_fm/bulkformer/: __init__.py  embed.py  generate.py  pipeline.py  setup.py
inflamm_debate_fm/cli/: __init__.py  __main__.py  analyze.py  combine_bootstrap_results.py  download.py  embed.py  finetune.py  main.py  plot.py  preprocess.py  probe.py  utils.py
inflamm_debate_fm/config/: __init__.py  config.py  default.toml
inflamm_debate_fm/data/: __init__.py  clean.py  constants.py  download_raw.py  extract_metadata.py  geo_preprocessing.py  load.py  orthologs.py  pipeline.py  preprocess_raw.py  preprocessing.py  rma.py  transforms.py
inflamm_debate_fm/embeddings/: __init__.py  generate.py  load.py  multi_model.py
inflamm_debate_fm/finetuning/: __init__.py  batching.py  contrastive.py  data.py  lora.py  model_utils.py  train.py  training_loops.py
inflamm_debate_fm/modeling/: coefficients.py  evaluation.py  pipelines.py  predict.py  train.py
inflamm_debate_fm/utils/: __init__.py  download.py  gene_utils.py  io.py  wandb_utils.py
inflamm_debate_fm/workflows/: __init__.py  workflows.py
jobs/: README.md  analyze_coeffs.sh  analyze_gsea.sh  embed.sh  embed_all.sh  preprocess.sh  probe_cross.sh  probe_within.sh
notebooks/: 0.0-data-preprocessing.ipynb  0.1-reproducing-seok.ipynb  0.2-reproducing-takao.ipynb  1.0-data-preprocessing.ipynb  1.0-emb-pooling.ipynb  1.1-emb-fine-tuned.ipynb  2.0-linear-probing.ipynb  2.0-model-transferability.ipynb  2.0-within-species-probing.ipynb  2.1-cross-species-probing.ipynb
notebooks/deprecated/: 2.2-inflammation_vector.ipynb  3.1-raw-expression-genes.ipynb  3.2-raw-expression-genes-analysis.ipynb
notebooks/old/: README.md  correlation_analysis.ipynb  differential_ge.ipynb  preprocess_gses.ipynb  signature_analysis.ipynb
scripts/: preprocess_rma_brainarray.R  run_probing_parallel.sh
